<?xml version="1.0" encoding="utf-8"?>
<!-- 2015-09-01 K.OHWADA -->
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"  
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"     
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_marginBottom="16dp" >

        <EditText
            android:id="@+id/EditText_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/edittext_ip_hint"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_connnect"
            android:onClick="onClickConnect"/>

    </LinearLayout>

    <include layout="@layout/nine_buttons" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" >

        <TextView
            android:text="@string/label_x"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp" />

        <EditText
            android:id="@+id/EditText_x"
            android:hint="@string/edittext_x_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/label_y"
            android:layout_width="100dp"
            android:layout_height="wrap_content" 
            android:layout_marginRight="8dp" />

        <EditText
            android:id="@+id/EditText_y"
            android:hint="@string/edittext_y_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/label_theta"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp" />

        <EditText
            android:id="@+id/EditText_theta"
            android:hint="@string/edittext_theta_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
